--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,7 @@
     "dev": "nodemon src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "lint": "eslint src --ext .ts",
-    "test": "jest"
+    "lint": "eslint src --ext .ts"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
