--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -16,7 +16,7 @@
     "sourceMap": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "types": ["node", "jest"],
+    "types": ["node"],
     "baseUrl": "./src",
     "paths": {
       "@/*": ["./*"],
